:sparkles: Add delete node feature

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
             <button onclick="event_reset()">Reset</button>
             <button onclick="event_undo()">Undo</button>
             <button onclick="event_redo()">Redo</button>
+            <button onclick="event_delete()">Delete</button>
             <button onclick="event_center()">Layout</button>
             <input type="url" value="ws://localhost:8765" id="socketUrl"></input>
             <button onclick="event_connect()" id="connectBtn">Connect</button>
