--- a/web/index.html
+++ b/web/index.html
@@ -14,13 +14,13 @@
 
         <div class="buttons right">
             <button onclick="event_import()" title="Import"><img src="images/icon_import.svg" class="action_icon" alt="Import" /></button>
-            <button onclick="event_export()" title="Export"><img src="images/icon_export.svg" class="action_icon" alt="Export" /></button>
+            <button onclick="event_export()" title="Export (Ctrl+S)"><img src="images/icon_export.svg" class="action_icon" alt="Export" /></button>
             <button onclick="event_mermaid()" title="Mermaid"><img src="images/icon_mermaid.svg" class="action_icon" alt="Mermaid" /></button>
             <button onclick="event_reset()" title="Reset"><img src="images/icon_reset.svg" class="action_icon" alt="Reset" /></button>
-            <button onclick="event_undo()" title="Undo"><img src="images/icon_undo.svg" class="action_icon" alt="Undo" /></button>
-            <button onclick="event_redo()" title="Redo"><img src="images/icon_redo.svg" class="action_icon" alt="Redo" /></button>
-            <button onclick="event_delete()" title="Delete"><img src="images/icon_delete.svg" class="action_icon" alt="Delete" /></button>
-            <button onclick="event_center()" title="Layout"><img src="images/icon_layout.svg" class="action_icon" alt="Layout" /></button>
+            <button onclick="event_undo()" title="Undo (Ctrl+Z)"><img src="images/icon_undo.svg" class="action_icon" alt="Undo" /></button>
+            <button onclick="event_redo()" title="Redo (Ctrl+Y)"><img src="images/icon_redo.svg" class="action_icon" alt="Redo" /></button>
+            <button onclick="event_delete()" title="Delete (Delete)"><img src="images/icon_delete.svg" class="action_icon" alt="Delete" /></button>
+            <button onclick="event_center()" title="Layout (Home)"><img src="images/icon_layout.svg" class="action_icon" alt="Layout" /></button>
             <input type="url" value="ws://localhost:8765" id="socketUrl"></input>
             <button onclick="event_connect()" id="connectBtn" title="Connect"><img src="images/icon_connect.svg" class="action_icon" alt="Connect" /></button>
         </div>
@@ -37,9 +37,13 @@
 
     <div class="view"></div>
 
+    <!-- Dependencies -->
     <script src='scripts/third_party/panzoom.min.js'></script>
     <script src="scripts/third_party/mermaid.min.js"></script>
     <script src="scripts/third_party/vis-data.min.js"></script>
+    <script src="scripts/third_party/hotkeys.min.js"></script>
+
+    <!-- The code -->
     <script src="scripts/TabsController.js"></script>
     <script src="scripts/TabController.js"></script>
     <script src="scripts/NetworkController.js"></script>
