:sparkles: Add linked projects

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
     <div id="context-menu">
         <div class="item" id="renameTab">Rename</div>
         <div class="item" id="removeTab">Remove</div>
+        <div class="item" id="sources">Linked projects</div>
     </div>
 
     <div class="view"></div>
@@ -42,6 +43,7 @@
     <script src="scripts/third_party/mermaid.min.js"></script>
     <script src="scripts/third_party/vis-data.min.js"></script>
     <script src="scripts/third_party/hotkeys.min.js"></script>
+    <script src="scripts/third_party/sweetalert2.js"></script>
 
     <!-- The code -->
     <script src="scripts/TabsController.js"></script>
