:sparkles: Add opengrok support

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -5,10 +5,12 @@
 <head>
     <title>Graffiti</title>
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="icon" href="/images/icon.png">
 </head>
 
 <body>
     <header>
+        <img src="images/icon.png" class="icon" />
         <h1>Graffiti</h1>
         <span class="subtitle">An experiment by yoavst</span>
 
