:lipstick: Improve arrow apperance

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -34,12 +34,12 @@
                     <input class="input" type="checkbox" id="isExistingToNew" checked="true"></input>
                     <input class="input" type="checkbox" id="isNewWillBeSelected" checked="true"></input>
                     <div class="toggle-wrapper-wrapper">
-                        <span class="text notSelectedText">Existing</span>
+                        <span class="text notSelectedText" content="Existing">Existing</span>
                         <div class="toggle-wrapper">
                             <span class="line"></span>
                             <span class="head"></span>
                         </div>
-                        <span class="text selectedText">New</span>
+                        <span class="text selectedText" content="New">New</span>
                     </div>
                 </label>
             </div>
