:construction: Inital support for themes and markdown nodes

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -19,6 +19,8 @@
                     class="action_icon" alt="Export" /></button>
             <button onclick="event_mermaid()" title="Mermaid"><img src="images/icon_mermaid.svg" class="action_icon"
                     alt="Mermaid" /></button>
+            <button onclick="event_addTextNode()" title="Add text node"><img src="images/icon_add.svg" class="action_icon"
+                alt="Add text node" /></button>
             <button onclick="event_reset()" title="Reset"><img src="images/icon_reset.svg" class="action_icon"
                     alt="Reset" /></button>
             <button onclick="event_undo()" title="Undo (Ctrl+Z)"><img src="images/icon_undo.svg" class="action_icon"
