--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -21,6 +21,8 @@
                     alt="Mermaid" /></button>
             <button onclick="event_addTextNode()" title="Add text node"><img src="images/icon_add.svg" class="action_icon"
                 alt="Add text node" /></button>
+            <button onclick="event_addComment()" title="Add comment node"><img src="images/icon_comment.svg" class="action_icon"
+                alt="Add comment node" /></button>
             <button onclick="event_reset()" title="Reset"><img src="images/icon_reset.svg" class="action_icon"
                     alt="Reset" /></button>
             <button onclick="event_undo()" title="Undo (Ctrl+Z)"><img src="images/icon_undo.svg" class="action_icon"
