:bookmark: Update to version 1.2.0

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -66,7 +66,7 @@
     <div class="view"></div>
 
     <footer style="display: none;">
-        <span class="subtitle">An experiment by yoavst (2023)</span>
+        <span class="subtitle">An experiment by yoavst (2023) - Version _VERSION_</span>
         <div class="right">
             <span>Press ? for help</span>
         </div>
