Add support for hover

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -1,7 +1,4 @@
 <html>
-<!DOCTYPE html>
-<html>
-
 <head>
     <title>Graffiti</title>
     <link href="styles/style.css" rel="stylesheet">
@@ -79,6 +76,9 @@
     <script src="scripts/third_party/vis-data.min.js"></script>
     <script src="scripts/third_party/hotkeys.min.js"></script>
     <script src="scripts/third_party/sweetalert2.js"></script>
+    <script src="scripts/third_party/showdown.min.js"></script>
+    <script src="scripts/third_party/popper.min.js"></script>
+    <script src="scripts/third_party/tippy.min.js"></script>
 
     <!-- The code -->
     <script src="scripts/TabsController.js"></script>
