--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -73,7 +73,6 @@
     <!-- Dependencies -->
     <script src='scripts/third_party/panzoom.min.js'></script>
     <script src="scripts/third_party/mermaid.min.js"></script>
-    <script src="scripts/third_party/vis-data.min.js"></script>
     <script src="scripts/third_party/hotkeys.min.js"></script>
     <script src="scripts/third_party/sweetalert2.js"></script>
     <script src="scripts/third_party/showdown.min.js"></script>
@@ -81,6 +80,7 @@
     <script src="scripts/third_party/tippy.min.js"></script>
 
     <!-- The code -->
+    <script src="scripts/DataSet.js"></script>
     <script src="scripts/TabsController.js"></script>
     <script src="scripts/TabController.js"></script>
     <script src="scripts/NetworkController.js"></script>
