:bug: Fix bug in dataset

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -16,7 +16,7 @@
                     class="action_icon" alt="Export" /></button>
             <button onclick="event_mermaid()" title="Mermaid"><img src="images/icon_mermaid.svg" class="action_icon"
                     alt="Mermaid" /></button>
-            <button onclick="event_addTextNode()" title="Add text node"><img src="images/icon_add.svg" class="action_icon"
+            <button onclick="event_addTextNode()" title="Add text node (Ctrl+Shift+Q)"><img src="images/icon_add.svg" class="action_icon"
                 alt="Add text node" /></button>
             <button onclick="event_addComment()" title="Add comment to node (ctrl+Q)"><img src="images/icon_comment.svg" class="action_icon"
                 alt="Add comment to node" /></button>
