:page_facing_up: change subtitle

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -62,7 +62,7 @@
     <div class="view"></div>
 
     <footer style="display: none;">
-        <span class="subtitle">An experiment by yoavst (2023) - Version _VERSION_</span>
+        <span class="subtitle">yoavst (2023) - Version _VERSION_</span>
         <div class="right">
             <span>Press ? for help</span>
         </div>
