--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -70,6 +70,9 @@
     </footer>
 
     <!-- Dependencies -->
+    <script>
+        window.version = parseFloat("_VERSION_")
+    </script>
     <script src='scripts/third_party/panzoom.min.js'></script>
     <script src="scripts/third_party/mermaid.min.js"></script>
     <script src="scripts/third_party/hotkeys.min.js"></script>
