--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -14,8 +14,8 @@
                     alt="Import" /></button>
             <button onclick="event_export()" oncontextmenu="return event_exportAll()" title="Export (Ctrl+S); Export All (Ctrl+Alt+S)"><img src="images/icon_export.svg"
                     class="action_icon" alt="Export" /></button>
-            <button onclick="event_mermaid()" title="Mermaid"><img src="images/icon_mermaid.svg" class="action_icon"
-                    alt="Mermaid" /></button>
+            <button onclick="event_shareGraph()" title="Share graph"><img src="images/icon_mermaid.svg" class="action_icon"
+                    alt="Share graph" /></button>
             <button onclick="event_addTextNode()" title="Add text node (Ctrl+Shift+Q)"><img src="images/icon_add.svg" class="action_icon"
                 alt="Add text node" /></button>
             <button onclick="event_addComment()" title="Add comment to node (ctrl+Q)"><img src="images/icon_comment.svg" class="action_icon"
