:sparkles: Add a command palette

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -66,13 +66,12 @@
     <footer style="display: none;">
         <span class="subtitle">yoavst (2023) - Version _VERSION_</span>
         <div class="right">
-            <span>Press ? for help</span>
+            <span>Press ? for help, Ctrl+Shift+P for command palette</span>
         </div>
         <div class="clearfix">&nbsp;</div>
     </footer>
 
-    <ninja-keys hideBreadcrumbs openHotkey>
-        <div slot="footer"></div>
+    <ninja-keys openHotkey>
     </ninja-keys>
 
     <!-- Dependencies -->
@@ -93,6 +92,7 @@
     <script src="scripts/TabsController.js"></script>
     <script src="scripts/TabController.js"></script>
     <script src="scripts/NetworkController.js"></script>
+    <script src="scripts/commandPalette.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
