--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -86,6 +86,7 @@
     <script src="scripts/third_party/popper.min.js"></script>
     <script src="scripts/third_party/tippy.min.js"></script>
     <script src="scripts/third_party/ninja-keys.js"></script>
+    <script src="scripts/third_party/tarts.js"></script>
 
     <!-- The code -->
     <script src="scripts/DataSet.js"></script>
