:sparkles: Add check for update and changelog for web

--- a/Frontends/web/index.html
+++ b/Frontends/web/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Graffiti</title>
+    <meta charset="UTF-8">
     <link href="styles/style.css" rel="stylesheet">
     <link rel="icon" href="/images/icon.png">
 </head>
@@ -82,7 +83,6 @@
     <!-- Dependencies -->
     <script>
         window.versionStr = "_VERSION_"
-        window.version = parseFloat("_VERSION_")
     </script>
     <script src='scripts/third_party/panzoom.min.js'></script>
     <script src="scripts/third_party/mermaid.min.js"></script>
