:sparkles: Add multi-user support to frontend

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -55,6 +55,8 @@
             <input type="url" value="ws://localhost:8503" id="socketUrl"></input>
             <button onclick="event_connect()" id="connectBtn" title="Connect"><img src="images/icons/icon_connect.svg"
                     class="action_icon" alt="Connect" /></button>
+            <button onclick="event_showManageTokenDialog()" id="tokenBtn" title="Manage token (Ctrl+K)"><img src="images/icons/icon_key.svg"
+                class="action_icon" alt="Manage token" /></button>
         </div>
         <div class="clearfix">&nbsp;</div>
     </header>
