--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -1,95 +1,209 @@
 <html>
-
-<head>
+  <head>
     <title>Graffiti</title>
-    <meta charset="UTF-8">
-    <link href="styles/style.css" rel="stylesheet">
-    <link rel="icon" href="/images/icon.png">
-</head>
+    <meta charset="UTF-8" />
+    <link href="styles/style.css" rel="stylesheet" />
+    <link rel="icon" href="/images/icon.png" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="images/icon.png" class="icon" />
-        <h1>Graffiti</h1>
-        <div class="buttons right">
-            <button onclick="event_import()" title="Import (Ctrl+O)"><img src="images/icons/icon_import.svg"
-                    class="action_icon" alt="Import" /></button>
-            <button onclick="event_export()" oncontextmenu="return event_exportAll()"
-                title="Export (Ctrl+S); Export All (Ctrl+Alt+S)"><img src="images/icons/icon_export.svg" class="action_icon"
-                    alt="Export" /></button>
-            <button onclick="event_shareGraph()" title="Share graph"><img src="images/icons/icon_mermaid.svg"
-                    class="action_icon" alt="Share graph" /></button>
-            <button onclick="event_addTextNode()" title="Add text node (Ctrl+Shift+Q)"><img src="images/icons/icon_add.svg"
-                    class="action_icon" alt="Add text node" /></button>
-            <button onclick="event_addComment()" title="Add comment to node (ctrl+Q)"><img src="images/icons/icon_comment.svg"
-                    class="action_icon" alt="Add comment to node" /></button>
-            <button onclick="event_reset()" title="Reset"><img src="images/icons/icon_reset.svg" class="action_icon"
-                    alt="Reset" /></button>
-            <button onclick="event_undo()" title="Undo (Ctrl+Z)"><img src="images/icons/icon_undo.svg" class="action_icon"
-                    alt="Undo" /></button>
-            <button onclick="event_redo()" title="Redo (Ctrl+Y)"><img src="images/icons/icon_redo.svg" class="action_icon"
-                    alt="Redo" /></button>
-            <button onclick="event_delete()" title="Delete (Delete)"><img src="images/icons/icon_delete.svg"
-                    class="action_icon" alt="Delete" /></button>
-            <button onclick="event_focusOnSelected()" oncontextmenu="return event_center()"
-                title="Focus selecred node (Home)&#10;&#13;Right click to reset zoom (Ctrl+Home)"><img
-                    src="images/icons/icon_layout.svg" class="action_icon" alt="Focus" /></button>
-            <button onclick="event_search()" oncontextmenu="return event_searchAll()"
-                title="Search (Ctrl+F); Search all (Ctrl+Shift+F)"><img src="images/icons/icon_search.svg" class="action_icon"
-                    alt="Search" /></button>
-            <div class="arrowToggle" title="Arrow direction (Ctrl+I)&#10;&#13;Focus (Ctrl+Alt+Shift+I)"
-                oncontextmenu="return event_toggleFocusTarget()">
-                <label for="isExistingToNew">
-                    <input class="input" type="checkbox" id="isExistingToNew" checked="true"></input>
-                    <input class="input" type="checkbox" id="isNewWillBeSelected" checked="true"></input>
-                    <div class="toggle-wrapper-wrapper">
-                        <span class="text notSelectedText" content="Existing">Existing</span>
-                        <div class="toggle-wrapper">
-                            <span class="line"></span>
-                            <span class="head"></span>
-                        </div>
-                        <span class="text selectedText" content="New">New</span>
-                    </div>
-                </label>
+      <img src="images/icon.png" class="icon" />
+      <h1>Graffiti</h1>
+      <div class="buttons right">
+        <button onclick="event_import()" title="Import (Ctrl+O)">
+          <img
+            src="images/icons/icon_import.svg"
+            class="action_icon"
+            alt="Import"
+          />
+        </button>
+        <button
+          onclick="event_export()"
+          oncontextmenu="return event_exportAll()"
+          title="Export (Ctrl+S); Export All (Ctrl+Alt+S)"
+        >
+          <img
+            src="images/icons/icon_export.svg"
+            class="action_icon"
+            alt="Export"
+          />
+        </button>
+        <button onclick="event_shareGraph()" title="Share graph">
+          <img
+            src="images/icons/icon_mermaid.svg"
+            class="action_icon"
+            alt="Share graph"
+          />
+        </button>
+        <button
+          onclick="event_addTextNode()"
+          title="Add text node (Ctrl+Shift+Q)"
+        >
+          <img
+            src="images/icons/icon_add.svg"
+            class="action_icon"
+            alt="Add text node"
+          />
+        </button>
+        <button
+          onclick="event_addComment()"
+          title="Add comment to node (ctrl+Q)"
+        >
+          <img
+            src="images/icons/icon_comment.svg"
+            class="action_icon"
+            alt="Add comment to node"
+          />
+        </button>
+        <button onclick="event_reset()" title="Reset">
+          <img
+            src="images/icons/icon_reset.svg"
+            class="action_icon"
+            alt="Reset"
+          />
+        </button>
+        <button onclick="event_undo()" title="Undo (Ctrl+Z)">
+          <img
+            src="images/icons/icon_undo.svg"
+            class="action_icon"
+            alt="Undo"
+          />
+        </button>
+        <button onclick="event_redo()" title="Redo (Ctrl+Y)">
+          <img
+            src="images/icons/icon_redo.svg"
+            class="action_icon"
+            alt="Redo"
+          />
+        </button>
+        <button onclick="event_delete()" title="Delete (Delete)">
+          <img
+            src="images/icons/icon_delete.svg"
+            class="action_icon"
+            alt="Delete"
+          />
+        </button>
+        <button
+          onclick="event_focusOnSelected()"
+          oncontextmenu="return event_center()"
+          title="Focus selecred node (Home)&#10;&#13;Right click to reset zoom (Ctrl+Home)"
+        >
+          <img
+            src="images/icons/icon_layout.svg"
+            class="action_icon"
+            alt="Focus"
+          />
+        </button>
+        <button
+          onclick="event_search()"
+          oncontextmenu="return event_searchAll()"
+          title="Search (Ctrl+F); Search all (Ctrl+Shift+F)"
+        >
+          <img
+            src="images/icons/icon_search.svg"
+            class="action_icon"
+            alt="Search"
+          />
+        </button>
+        <div
+          class="arrowToggle"
+          title="Arrow direction (Ctrl+I)&#10;&#13;Focus (Ctrl+Alt+Shift+I)"
+          oncontextmenu="return event_toggleFocusTarget()"
+        >
+          <label for="isExistingToNew">
+            <input
+              class="input"
+              type="checkbox"
+              id="isExistingToNew"
+              checked="true"
+            />
+            <input
+              class="input"
+              type="checkbox"
+              id="isNewWillBeSelected"
+              checked="true"
+            />
+            <div class="toggle-wrapper-wrapper">
+              <span class="text notSelectedText" content="Existing"
+                >Existing</span
+              >
+              <div class="toggle-wrapper">
+                <span class="line"></span>
+                <span class="head"></span>
+              </div>
+              <span class="text selectedText" content="New">New</span>
             </div>
-            <input type="url" value="ws://localhost:8503" id="socketUrl"></input>
-            <button onclick="event_connect()" id="connectBtn" title="Connect"><img src="images/icons/icon_connect.svg"
-                    class="action_icon" alt="Connect" /></button>
-            <button onclick="event_showManageTokenDialog()" id="tokenBtn" title="Manage token (Ctrl+K)"><img src="images/icons/icon_key.svg"
-                class="action_icon" alt="Manage token" /></button>
+          </label>
         </div>
-        <div class="clearfix">&nbsp;</div>
+        <input type="url" value="ws://localhost:8503" id="socketUrl" />
+        <button onclick="event_connect()" id="connectBtn" title="Connect">
+          <img
+            src="images/icons/icon_connect.svg"
+            class="action_icon"
+            alt="Connect"
+          />
+        </button>
+        <button
+          onclick="event_showManageTokenDialog()"
+          id="tokenBtn"
+          title="Manage token (Ctrl+K)"
+        >
+          <img
+            src="images/icons/icon_key.svg"
+            class="action_icon"
+            alt="Manage token"
+          />
+        </button>
+      </div>
+      <div class="clearfix">&nbsp;</div>
     </header>
     <div class="tabs">
-        <button id="addTab" onclick="event_addTab()">+</button>
+      <button id="addTab" onclick="event_addTab()">+</button>
     </div>
     <div id="context-menu">
-        <div class="item" id="renameTab">Rename</div>
-        <div class="item" id="removeTab">Remove</div>
-        <div class="item" id="sources">Linked projects</div>
+      <div class="item" id="renameTab">Rename</div>
+      <div class="item" id="removeTab">Remove</div>
+      <div class="item" id="sources">Linked projects</div>
     </div>
 
     <div class="view"></div>
 
-    <footer style="display: none;">
-        <span style="text-align: left;">yoavst (2024) - Version _VERSION_</span>
-        <div class="center">
-            <a href="https://github.com/yoavst/graffiti" target="_blank" class="github_link center">
-                <span>View on github</span>
-                <svg viewBox="0 0 16 16" width="16px" height="16px" class="octicon octicon-mark-github" aria-hidden="true" style="fill: white;"><path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path></svg>
-            </a>
-        </div>
-        <span style="text-align: right;">Press ? for help and downloads, Ctrl+Shift+P for command palette</span>
+    <footer style="display: none">
+      <span style="text-align: left">yoavst (2024) - Version _VERSION_</span>
+      <div class="center">
+        <a
+          href="https://github.com/yoavst/graffiti"
+          target="_blank"
+          class="github_link center"
+        >
+          <span>View on github</span>
+          <svg
+            viewBox="0 0 16 16"
+            width="16px"
+            height="16px"
+            class="octicon octicon-mark-github"
+            aria-hidden="true"
+            style="fill: white"
+          >
+            <path
+              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <span style="text-align: right"
+        >Press ? for help and downloads, Ctrl+Shift+P for command palette</span
+      >
     </footer>
 
-    <ninja-keys openHotkey>
-    </ninja-keys>
+    <ninja-keys openHotkey> </ninja-keys>
 
     <!-- Dependencies -->
     <script>
-        window.versionStr = "_VERSION_"
+      window.versionStr = "_VERSION_";
     </script>
-    <script src='scripts/third_party/panzoom.min.js'></script>
+    <script src="scripts/third_party/panzoom.min.js"></script>
     <script src="scripts/third_party/mermaid.min.js"></script>
     <script src="scripts/third_party/hotkeys.min.js"></script>
     <script src="scripts/third_party/sweetalert2.js"></script>
@@ -106,6 +220,5 @@
     <script src="scripts/NetworkController.js"></script>
     <script src="scripts/commandPalette.js"></script>
     <script src="scripts/main.js"></script>
-</body>
-
+  </body>
 </html>
