:sparkles: Remember last connect url in web in chrome ext

--- a/backends/websites/public/popup/popup.html
+++ b/backends/websites/public/popup/popup.html
@@ -8,7 +8,7 @@
             <h1>Graffiti</h1>
             <div style="display: flex; align-items: center; justify-content: center">
                 <div>
-                    <input type="url" value="ws://localhost:8502" id="socketUrl" />
+                    <input type="url" id="socketUrl" placeholder="ws://localhost:8502" />
                     <button id="connectBtn" title="Connect">
                         <img src="/images/icon_connect.svg" class="action_icon" alt="Connect" />
                     </button>
