--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -136,7 +136,7 @@
             </div>
           </label>
         </div>
-        <input type="url" value="ws://localhost:8503" id="socketUrl" />
+        <input type="url" id="socketUrl" />
         <button onclick="event_connect()" id="connectBtn" title="Connect">
           <img
             src="images/icons/icon_connect.svg"
