:sparkles: Added a help button on the upper right side of the header

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -106,6 +106,16 @@
             alt="Search"
           />
         </button>
+        <button
+          onclick="event_help()"
+          title="Show help (?)"
+        >
+          <img
+            src="images/icons/icon_help.svg"
+            class="action_icon"
+            alt="Help"
+          />
+        </button>
         <div
           class="arrowToggle"
           title="Arrow direction (Ctrl+I)&#10;&#13;Focus (Ctrl+Alt+Shift+I)"
