Scrollable graph tabs

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -170,6 +170,8 @@
     </header>
     <div class="tabs">
       <button id="addTab" onclick="event_addTab()">+</button>
+      <div class="tab-list-wrapper">
+      </div>
     </div>
     <div id="context-menu">
       <div class="item" id="renameTab">Rename</div>
