Minor bugfix and UX improvements

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -171,8 +171,9 @@
     <div class="tabs">
       <!-- Leftmost tab search: collapsed to icon, expands on focus -->
       <div class="tab-search">
+        <!-- TODO: Replace the icon with something more "Graffiti" GUI vibe -->
         <button class="tab-search-button" aria-label="Search tabs">🔍</button>
-        <input class="tab-search-input" type="text" placeholder="tab search" />
+        <input class="tab-search-input" type="text" placeholder="Tab Search" />
       </div>
       <!-- Rightmost tab add -->
       <button id="addTab" onclick="event_addTab()">+</button>
