Added visuals for search results, maybe fixed scrolling bug

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -171,8 +171,11 @@
     <div class="tabs">
       <!-- Leftmost tab search: collapsed to icon, expands on focus -->
       <div class="tab-search">
-        <!-- TODO: Replace the icon with something more "Graffiti" GUI vibe -->
-        <button class="tab-search-button" aria-label="Search tabs">🔍</button>
+        <button class="tab-search-button" aria-label="Search tabs"  title="Search tabs">
+           <img data-icon-state="white"
+            src="images/icons/icon_search.svg"
+          />
+        </button>
         <input class="tab-search-input" type="text" placeholder="Tab Search" />
       </div>
       <!-- Rightmost tab add -->
