--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -179,6 +179,10 @@
         <input class="tab-search-input" type="text" placeholder="Tab Search" />
       </div>
       <!-- Rightmost tab add -->
+      <!-- Arrow appears when tab list is horizontally scrollable -->
+      <button id="tabsScrollDown" class="tab-arrow-button" onclick="event_toggleTabBarMode()" title="Show all tabs">
+        <img src="images/icons/icon_upside_down_triangle.svg" alt="Show all tabs" />
+      </button>
       <button id="addTab" onclick="event_addTab()">+</button>
       <!-- Tab list at the middle -->
       <div class="tab-list-wrapper">
