Working functionality + nice UI, need code improvements

--- a/frontends/web/index.html
+++ b/frontends/web/index.html
@@ -180,10 +180,10 @@
       </div>
       <!-- Rightmost tab add -->
       <!-- Arrow appears when tab list is horizontally scrollable -->
-      <button id="tabsScrollDown" class="tab-arrow-button" onclick="event_toggleTabBarMode()" title="Show all tabs">
-        <img src="images/icons/icon_upside_down_triangle.svg" alt="Show all tabs" />
+      <button id="tabExpand" class="tab-expand-button" onclick="event_toggleTabBarMode()" title="Show all tabs">
+        <img src="images/icons/icon_upside_down_triangle.svg" expand-icon-state="down" alt="Show all tabs" />
       </button>
-      <button id="addTab" onclick="event_addTab()">+</button>
+      <button id="addTab" class="add-tab-button" onclick="event_addTab()">+</button>
       <!-- Tab list at the middle -->
       <div class="tab-list-wrapper">
       </div>
